--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.2",
+    "@types/react-calendar": "^3.5.3",
     "keen-slider": "^6.8.2",
     "next": "12.3.1",
     "react": "18.2.0",
+    "react-calendar": "^3.9.0",
+    "react-date-picker": "^9.0.0",
     "react-dom": "18.2.0",
     "react-responsive-carousel": "^3.2.23",
     "swiper": "^8.4.4"
