--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@headlessui/react": "^1.7.2",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.10",
+    "@radix-ui/react-checkbox": "^1.0.1",
+    "@radix-ui/react-popover": "1.0.2",
     "@types/react-calendar": "^3.5.3",
     "keen-slider": "^6.8.2",
     "next": "12.3.1",
