--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@radix-ui/react-checkbox": "^1.0.1",
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-popover": "1.0.2",
+    "@radix-ui/react-toast": "^1.1.1",
     "@supabase/supabase-js": "1.35.4",
     "@types/react-calendar": "^3.5.3",
     "keen-slider": "^6.8.2",
     "next": "12.3.1",
+    "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-calendar": "^3.9.0",
     "react-date-picker": "^9.0.0",
