--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-date-picker": "^9.0.0",
     "react-dom": "18.2.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-toastify": "^9.1.1",
     "swiper": "^8.4.4"
   },
   "devDependencies": {
